--- a/app/views/institutions/_form_sliding_scales.html.erb
+++ b/app/views/institutions/_form_sliding_scales.html.erb
@@ -111,5 +111,5 @@
       <%= c.link_to_add "Add Course Levels", :sliding_scales,{class: 'btn-sm btn-default'} %>
     </div>
   </div>
-
+  <link href="/css/jquery-ui-1.10.4.custom.css" media="all" rel="stylesheet" type="text/css" />
 
