--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -56,15 +56,20 @@ body {
 .seperator {
   border-bottom: 1px solid #DDDDDD; }
 
-.popover {
+.popover1 {
   background-color: #FFFFFF;
   color: #222222;
   border: 1px solid #BBBBBB;
-  max-width: 350px;
+  max-width: 500px;
   max-height: 500px;
   overflow: auto; }
-  .popover .notification-content p {
+  .popover1 .notification-content p {
     margin-bottom: 0; }
+    
+.popover {
+  max-width: 800px;
+  width: auto;
+}
 
 /* Set the fixed height of the footer here */
 #footer {
@@ -94,7 +99,7 @@ body {
     vertical-align: middle;
     padding: 3px 5px;
     background-color: #F17F6A;
-    color: #000000; }
+    color: #000000;     }
   #header .glyphicon-bell {
     margin-right: .5rem; }
 
