--- a/app/assets/stylesheets/token-input-facebook.css
+++ b/app/assets/stylesheets/token-input-facebook.css
@@ -21,7 +21,7 @@ ul.token-input-list-facebook {
 
 ul.token-input-list-facebook li input {
     border: 0;
-    width: 100px;
+    width: 400px;
     padding: 3px 8px;
     background-color: white;
     margin: 2px 0;
@@ -80,7 +80,7 @@ li.token-input-input-token-facebook {
 
 div.token-input-dropdown-facebook {
     position: absolute;
-    width: 415px;
+    width: auto;
     background-color: #fff;
     overflow: hidden;
     border-left: 1px solid #ccc;
