--- a/app/views/institutions/_contract.html.erb
+++ b/app/views/institutions/_contract.html.erb
@@ -6,7 +6,9 @@
     <div class="panel-heading">
       <h4 class="panel-title">
         <a data-toggle="collapse" data-parent="#accordion" href="#collapsedet">
+        <span class="bold-subhead">
          Details
+         </span>
         </a>
       </h4>
     </div>
@@ -53,13 +55,15 @@
     <div class="panel-heading">
       <h4 class="panel-title">
         <a data-toggle="collapse" data-parent="#accordion" href="#collapserec">
+         <span class="bold-subhead">
          Recruitment Territories
+         </span>
         </a>
       </h4>
     </div>
     <div id="collapserec" class="panel-collapse collapse">
       <div class="panel-body">
-          <div class="col-xs-8">
+          <div class="col-xs-12">
             <ul class="vlsdet-xl pt-0">
                     <% %w(all_prohibited_countries all_permitted_countries
                            all_prohibited_regions all_permitted_regions).each do |elem| %>
@@ -77,7 +81,9 @@
     <div class="panel-heading">
       <h4 class="panel-title">
         <a data-toggle="collapse" data-parent="#accordion" href="#collapsesli">
+         <span class="bold-subhead">
          Sliding Scale
+         </span>
         </a>
       </h4>
     </div>
@@ -88,7 +94,7 @@
             <% a.sliding_scales.each do |ss| %>
               <ul class="vlsdet-xl pt-0">
               <% clev =  ss.course_level_name.join(", ") %>
-              <h5><%= clev.blank? ? "All Course Levels" : clev %></h5>
+              <h5 class="bold-subhead"><%= clev.blank? ? "All Course Levels" : clev %></h5>
 
               <li>
               <label class=light>Progression</label>
@@ -123,9 +129,11 @@
                     <td><%= sr.from %></td>
                     <td><%= sr.to %></td>
                     <td><%= sr.commission_percentage %> %&nbsp;&nbsp;
-                    <span class="tag-like green">
-                    <%= text %>
-                    </span>
+                        <% if !text.nil? %>
+                            <span class="tag-like green">
+                            <%= text %>
+                            </span>
+                        <% end %>
                     </td>
                   </tr>
                   <% end %>
@@ -143,7 +151,9 @@
     <div class="panel-heading">
       <h4 class="panel-title">
         <a data-toggle="collapse" data-parent="#accordion" href="#collapsedoc">
+        <span class="bold-subhead">
          Documents
+         </span>
         </a>
       </h4>
     </div>
@@ -210,7 +220,9 @@
     <div class="panel-heading">
       <h4 class="panel-title">
         <a data-toggle="collapse" data-parent="#accordion" href="#collapsenot">
+        <span class="bold-subhead">
          Notes
+         </span>
         </a>
       </h4>
     </div>
