--- a/app/views/institutions/_form.html.erb
+++ b/app/views/institutions/_form.html.erb
@@ -5,22 +5,27 @@
                     class: "form-horizontal"}) do |f| %>
 
                           <% if @institution.errors.any? %>
-                           <div id="error_explanation">
+                           <div id="error_explanation" class="row">
+                           <div class="col-xs-12">
                            <h2>
-                           <%= pluralize(@institution.errors.count, "error") %> prohibited this enquiry from being saved:</h2>
-                           <ul>
+                           <%= pluralize(@institution.errors.count, "error") %> prohibited this institution from being saved</h2>
+                           <ul class="vlsdet-s">
                              <% @institution.errors.full_messages.each do |msg| %>
-                              <li><%= msg %></li>
+                              <li>
+                              <label>&nbsp;</label>
+                              <small  class="red-wrong"><%= msg %></small>
+                              </li>
                              <% end %>
                            </ul>
+                           </div>
                            </div>
                           <% end %>
 
    <div class="row row-top">
-    <div class="col-xs-7">
+    <div class="col-xs-9">
       <h3><%= what %> institution <span class="light"> <%= link %> </span></h3>
     </div>
-    <div class="col-xs-5 text-right">
+    <div class="col-xs-3 text-right">
       <div class="form-group form-last">
         <%= f.submit "Save",{class: "btn btn-primary btn-next"} %>
         <%= f.submit "Save and New",{class: "btn btn-primary btn-next", :name => 'save_new'} %>
