--- a/app/views/registrations/_application.html.erb
+++ b/app/views/registrations/_application.html.erb
@@ -12,7 +12,7 @@
 <div class="row row-right">
 
 <h4>
-   <%= link_to Country.find(prog).name,"#",{class: "collapse_all"} %>
+  <strong> <%= link_to Country.find(prog).name,"#",{class: "collapse_all"} %></strong>
 </h4>
   <% progs[prog].each do |i| %>
     <!-- @programme is used in 2 partials, change status and add note -->
@@ -23,11 +23,13 @@
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapse<%= i.id %>"><%= i.institution.name %></a>
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse<%= i.id %>">
+        <strong><%= i.institution.name %></strong></a>
         <small>
-           <span id="tag_reg_status_<%= i.id %>" class="ml-10"><%= i.application_status.name rescue "Unknown" %></span>
-           <span class="ml-10"><%= i.institution.type.name %></span>
-           <span class="ml-10"'><%= i.institution.group.name rescue "No" %> Group</span>
+           <span id="tag_reg_status_<%= i.id %>" class="ml-10 tag-like green"><%= i.application_status.name rescue "Unknown" %></span>
+           <span class="ml-10 tag-like purple"><%= i.course_level_name %></span>
+           <span class="ml-10 tag-like blue"><%= i.institution.type.name %></span>
+           <span class="ml-10 tag-like blue"'><%= i.institution.group.name rescue "No" %> Group</span>
            <br/>
            <br/>
            <small>
