--- a/app/views/registrations/_finance.html.erb
+++ b/app/views/registrations/_finance.html.erb
@@ -15,9 +15,11 @@
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapse<%= i.id %>"><%= app_name %></a>
-        <small class="ml-10"><%= app_status %></small>
-        <small class="ml-10"><%= r_order.ordinalize %> student</small>
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse<%= i.id %>">
+        <strong> <%= app_name %></strong>
+        </a>
+        <small class="ml-10 tag-like green"><%= app_status %></small>
+        <small class="ml-10 tag-like blue"><%= r_order.ordinalize %> student</small>
         <% if eval_status %>
         <small class="ml-10">
         <small>
@@ -118,7 +120,7 @@
           <% end %>
             <% if !comms.blank? %>
               <div class="col-md-6 well">
-              <h4>Commission Details</h4>
+              <h4 class="bold-subhead">Commission Details</h4>
               <table class="table table-bordered" border="0" cellpadding="0" cellspacing="0" width="100%">
                  <thead>
                   <tr>
