--- a/app/views/handle/e_500.html.erb
+++ b/app/views/handle/e_500.html.erb
@@ -144,6 +144,9 @@
           <div class="row text-center"> 
             <img src="/images/error.jpg" />
           </div>
+          <h1 class="row">
+            That's right, Jack! Titanic is still under construction. Come back later. 
+          </h1>
         </div>
       </div>
     </div>
