--- a/app/views/handle/e_500.html.erb
+++ b/app/views/handle/e_500.html.erb
@@ -144,7 +144,7 @@
           <div class="row text-center"> 
             <img src="/images/error.jpg" />
             <h1 class="row">
-              That's right, Jack! Titanic is still under construction. Come back later. 
+              That's right, Jack! Titanic is still <strong>under construction.</strong> Come back later. 
             </h1>
           </div>
           
