--- a/app/views/enquiries/_form.html.erb
+++ b/app/views/enquiries/_form.html.erb
@@ -1,36 +1,65 @@
-<%= nested_form_for(@enquiry, :html => {:onsubmit => "return validateAll(this);"}) do |f| %>
-  <% if @enquiry.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@enquiry.errors.count, "error") %> prohibited this enquiry from being saved:</h2>
-      <ul>
-      <% @enquiry.errors.full_messages.each do |msg| %>
-        <%= msg %>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-                   
-                   
-  <%= render 'enquiry_information', :f => f %>
- 
-  <%= render 'preferred_countries', :f => f %>
-  
-   <div class="htab">
-     <h5><b>Programmes Interested</b></h5>
-   </div>
-   <br/>   
-  <%= render 'preferred_programmes', :f => f, obj: "enquiry" %>
-  
-  
-  <div class="cl"></div>
-  <br/>
-  <br/>
-  
-  <div class="actions" style="margin-bottom:10px;">
-   <%= f.submit "Save",{:class => "btnp fr"} %>
-   <%= f.submit "Save and New",{:class => "btnp fr", :name => 'save_new'} %>
-  </div>
-  <div class="cl"></div>
-<% end %>
+<!-- create a new enquiry -->
+            <div class="row row-top">
+              <div class="col-md-12">
+                <h3>New Enquiry</h3>
+              </div>
+            </div>
+
+            <div class="new-enq-reg">
+
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="well">
+                     <%= nested_form_for(@enquiry, :html => {onsubmit: "return validateAll(this);",
+                                                    class: "form-horizontal"}) do |f| %>
+                          <% if @enquiry.errors.any? %>
+                            <div id="error_explanation">
+                              <h2><%= pluralize(@enquiry.errors.count, "error") %> prohibited this enquiry from being saved:</h2>
+                              <ul>
+                              <% @enquiry.errors.full_messages.each do |msg| %>
+                                <%= msg %>
+                              <% end %>
+                              </ul>
+                            </div>
+                          <% end %>
+ <!-- Assigning the current_user's id to assigned_by and passing with the form as hidden input -->
+                      <%= f.hidden_field :assigned_by, :value => current_user.id.to_s %>
+
+                      <!-- rendering the partial enquiry_information that captures personal info of an enquiry by passing the form object f -->
+                      <%= render 'enquiry_information', :f => f %>
+                      <br/>
+                      <%= render 'preferred_countries', :f => f %>
+                      <br/>
+                      <%= render 'preferred_programmes', :f => f, flag: "show_title" %>
+
+                      <div class="row row-top mt-15">
+                        <div class="col-xs-12">
+                          <div class="form-group form-last">
+                            <div class="col-xs-12 text-right">
+                            <%= f.submit "Save",{class: "btn btn-primary"} %>
+                            <%= f.submit "Save and New",{class: "btn btn-primary",
+                                                   name: 'save_new'} %>
+                           </div>
+                          </div>
+                        </div>
+                      </div>
 
 
+
+                   <% end %>
+                  </div>
+                </div>
+              </div>
+             </div>
+
+<script>
+
+ actmm('enquiries');
+
+    var cols = $('#enquiry-country_ids').data('items');
+
+      $.each(cols, function( index, value ){
+        $("#ms-enquiry_country_ids_ .ms-selectable:first-child ul li[id="+ value +"-selectable]").trigger("click");
+      });
+
+</script>
