--- a/app/views/enquiries/new.html.erb
+++ b/app/views/enquiries/new.html.erb
@@ -30,7 +30,7 @@
                       <br/>
                       <%= render 'preferred_countries', :f => f %>
                       <br/>
-                      <%= render 'preferred_programmes', :f => f, obj: "enquiry" %>
+                      <%= render 'preferred_programmes', :f => f, flag: "show_title" %>
 
                       <div class="row row-top mt-15">
                         <div class="col-xs-12">
