--- a/app/views/registrations/_form_course_of_interest.html.erb
+++ b/app/views/registrations/_form_course_of_interest.html.erb
@@ -1,1 +1,1 @@
-<%= render 'enquiries/preferred_programmes',f: f,obj: "registration" %>
+<%= render 'enquiries/preferred_programmes',f: f,flag: "registration" %>
