--- a/app/views/enquiries/_basic.html.erb
+++ b/app/views/enquiries/_basic.html.erb
@@ -1,123 +1,116 @@
-<!-- basic info for enquiry show page -->
+<!-- basic information about an enquiry -->
 <% a = @enquiry %>
-               <%= render 'images/disp', core: "enquiry", a: a %>
-             
-              <h4 class="htab">
-                    Personal information
-                    </h4>
-                        <% stat = disp1(a,"status") %>
 
-                        <ul style="list-style-type:none">
-                        <li><label>Enquiry Status </label>: <%= best_in_place_if (can? :update,a), a,
-                                :status_id, 
-                                :type => :select, 
-                                :collection => EnquiryStatus.order(:name).map{|i| [i.id,i.name]},
-                                :display_as => "status_name" %></li>
-                        <li><label>Contact Type </label>: <%= best_in_place_if (can? :update,a), a,
-                                :contact_type_id, 
-                                :type => :select, 
-                                :collection => ContactType.order(:name).map{|i| [i.id,i.name]},
-                                :display_as => "contact_type_name" %></li>
-                        <li><label>Mobile 1 </label>: <%= best_in_place_if (can? :update,a), a, :mobile1 %></li>
-                        <li><label>Mobile 2 </label>: <%= best_in_place_if (can? :update,a), a, :mobile2 %></li>
-                        <li><label>Email 1</label>: <%= best_in_place_if (can? :update,a), a, :email1 %></li>
-                        <li><label>Email 2</label>: <%= best_in_place_if (can? :update,a), a, :email2 %></li>
-                        <li><label>Country of Origin </label>: 
-                        <%= best_in_place_if (can? :update,a), a,
-                           :country_id, 
-                           :type => :select, 
-                           :collection => Country.order(:name).map{|i| [i.id,i.name]},
-                           :display_as => "country_of_origin_name" %>
-                        </li>
-                        </ul>
-                    
-                    <ul class="vlsdet" style="list-style-type:none">
-                    <li><label>Date of Birth</label>: 
-                    <%= best_in_place_if (can? :update,a), a, :date_of_birth, :type => :date %>
-                    </li>
-                    <li><label>Gender</label>: 
-                    <%= best_in_place_if (can? :update,a), a,:gender,type: :select,collection: [['m','male'],['f','female']] %></li>
-                    <li><label>Address</label>: 
-                    <%= best_in_place_if (can? :update,a), a,
-                                      :address, 
-                                      :type => :textarea %>
-                    </li>
-                    </ul>
-                    <h4 class="htab">
-                    Preferred countries
-                    </h4>
-                    <ul class="vlsdet">
-                    <li><%= disp2(a,"countries") %></li>
-                    </ul>
-                    <h4 class="htab">
-                    Programmes interested
-                    </h4>
-                    <ul class="vlsdet" style="list-style-type:none">
-                    <% a.programmes.each do |i| %>
-                      
-                      <% j = i.programme_type.try(:name).titleize rescue "Unknown" %>
-                                               
-                        <li><label>Type</label>: <%= j %></li>
-                        <li><label>Institution</label>: <%= i.institution.try(:name) %></li>
-                        <li><label>City</label>: <%= i.city.try(:name) %></li>
-                        <li><label>Country</label>: <%= i.country.try(:name) %></li>
-                        
-                        <% if j == "University" %>
-                          <li><label>Course Level</label>: <%= i.course_level.try(:name)  %></li>
-                        <% end %>
-                        
-                        <li><label>Course Subject</label>: <%= i.course_subject_text %> </li>
-                        <li><label>Start Date</label>: <%= i.start_date %></li>
-                        <li><label>End Date</label>: <%= i.end_date %></li>
+<div class="row border-b">
+  
+  <div class="col-xs-3">
+    <%= render 'images/disp', core: "enquiry", a: a %>
 
-                        <span class="fl">
-                        <%= link_to i._cre_by.first_name,"#" %> &nbsp;&nbsp; <%= i.created_at.strftime("%A, %F %R %p") %>
-                        </span>
+
+    <ul class="vlsdet-s" >
+        <h4 class="bold-subhead">Quick Info</h4>
+           <%= li2('source',[:source_id,:select,StudentSource,:source_name],a,nil,"span","strong")%>
+           <%= li2('status',[:status_id,:select,EnquiryStatus,:status_name],a,
+                 nil,"span","strong")%>
+           <%= li2('channel',[:contact_type_id,:select,ContactType,
+                  :contact_type_name],a,nil,"span","strong")%>
+
+           <% hsh = {emails: "by",follow_ups: "to",todos: "to",notes: "by"} %>
+           <% %w(emails follow_ups todos notes).each do |act| %>
+             <% out = meta(current_user.id,"enquiry",act,a.id,hsh[act.to_sym]) %>
+             <%= li1(act,out,'span','small')%>
+           <% end %>
+    </ul>
+
+  </div>
+  <div class="col-xs-5 row-top">
+    <ul class="vlsdet pt-0 border-b">
+        <h4 class="row-top bold-subhead">Personal</h4>
+        <% %w(first_name surname date_of_birth gender nationality).each do |v| %>
+        <%= li1(v,v,'span','small',a)%>
+        <% end %>
+    </ul>
+    <ul class="vlsdet">
+        <h4 class="bold-subhead">Contact</h4>
+        <% %w(mobile1 mobile2 email1 email2 address).each do |v| %>
+        <%= li1(v,v,'span','small',a)%>
+        <% end %>
+    </ul>
+  </div>
+  <div class="col-xs-4">
+    <div class="well well-sm form-last">
+        <h4 class="bold-subhead">History</h4>
+        <ul class="vlsdet-s pt-0">
+           <%= li1('enquired_at',a.created_at.to_date,'span','small')%>
+           <%= li1('created_by',a.cby,'span','small')%>
+           <%= li1('Modified At',a.updated_at.to_date,'span','small')%>
+           <%= li1('Modified By',a.uby,'span','small')%>
+           <% out = current_user.id == a.assigned_to ? [a.ato,1,'to me'] : a.ato %>
+           <%= li1('assigned to',out,'span','small')%>
+           <%= li1('assigned by',a.aby,'span','small')%>
+        </ul>
+    </div>
+  </div>
+  <div class="col-xs-4">
+    <ul class="vlsdet">
+        <h4 class="bold-subhead">Preferred Countries</h4>
+         <li>
+           <%= a.preferred_countries.blank? ? "<h5>No preferred countries</h5>".html_safe : "" %>
+           <% a.preferred_countries.each do |p| %>
+             <span class="tag-like blue"><%= p.country.name %></span>
+           <% end %>
+         </li>
+    </ul>
+  </div> 
+</div>
+
+<div class="row row-top">
+  <div class="col-xs-12">
+  <ul class="vlsdet">
+  <h4 class="bold-subhead">Programmes Interested</h4>
+  <%= a.programmes.blank? ? "<h5>No programmes</h5>".html_safe : "" %>
+  <% a.programmes.each do |i| %>
+      <div class="col-xs-6">
+        <%= render 'programme', i: i %>
+      </div>
+  <% end %>
+  </ul>
+  </div>
+</div>
+<div class="row row-top border-b">
+  <div class="col-xs-12">
+      <div class="panel-group" id="accordion">
+      <div class="panel panel-default">
+            <div class="panel-heading green-well">
+              <h4 class="panel-title">
+                <a data-toggle="collapse" data-parent="#accordion" href="#collapseNew">
+                <strong>
+                <span class="glyphicon glyphicon-plus-sign mar10"></span>New Programme</strong></a>
+              </h4>
+            </div>
+              <div id="collapseNew" class="panel-collapse collapse">
+                  <div class="panel-body">
+                    <%= nested_form_for(a,html: {class: "form-horizontal"}) do |f| %>
+                          <%= render 'enquiries/preferred_programmes',f: f,flag: "show_title",build: Programme.new %>
+                          <div class="row row-top mt-15">
+                            <div class="col-xs-12">
+                              <div class="form-group form-last">
+                                <div class="col-xs-12 text-right">
+                                <%= f.submit "Save",{class: "btn btn-primary"} %>
+                               </div>
+                              </div>
+                            </div>
+                          </div>
                     <% end %>
+                </div>
+              </div>
+        </div>
+      </div>
+      <div class="clear"></div>
+      <br/>
+  </div>
+</div>
 
-                    </ul>
-<h4>Enquiry history</h4>
-                    <ul class="infodhls" style="list-style-type:none">
-                        
-                        <li>
-                        <b>Inquiry date :</b> 
-                          <%= a.created_at.to_date %>
-                        </li>
-                        <li>
-                        <b>Enquiry Source :</b> 
-                          <%= disp1(a,'student_source') %>
-                        </li>
-                        <li>
-                        <b>Created by :</b> 
-                            <%= a._cre_by.first_name rescue "Unknown" %>
-                        </li>
-                        <li>
-                        <b>Created at :</b> 
-                          <%= a.created_at %>
-                        </li>
-                        <li>
-                        <br>
-                        <b>Last modified</b></li>
-                        <li><b>By :</b> 
-                            <%= a._upd_by.first_name rescue "Unknown"%>
-                        </li>
-                        <li><b>At :</b> 
-                            <%= a.updated_at %>
-                        </li>
-                        <li><br><b>Currently Assigned</b></li>
-                        <li><b>To :</b>
-                            <%= a._ass_to.first_name rescue "Unknown" %>
-                        </li>
-                        <li><b>By :</b> 
-                            <%= a._ass_by.first_name rescue "Unknown" %>
-                        </li> 
-                    </ul>
-
-                <% if current_user.adm? %>
-                  <% if !a.active %>
-                    <%= form_for(a) do |d| %>
-                      <%= d.hidden_field :active, value: true %>
-                      <%= d.submit "Activate",{class: "btnp fr"} %>
-                    <% end %>
-                  <% end %>
-                <% end %>
+<script>
+  $('.best_in_place').best_in_place();
+</script>
