--- a/app/views/enquiries/_preferred_programmes.html.erb
+++ b/app/views/enquiries/_preferred_programmes.html.erb
@@ -1,5 +1,5 @@
 <!-- prefer programmes -->
-<% if obj == "enquiry" %>
+<% if flag == "show_title" %>
 <h4 class="form-heading">Preferred Programmes</h4>
 <% end %>
   <%= f.fields_for :programmes, (build rescue nil) do |p| %>
