--- a/app/views/shared/_core_index.html.erb
+++ b/app/views/shared/_core_index.html.erb
@@ -7,7 +7,32 @@ $(function(){
 
             <div class="row row-top">
               <div class="col-md-10">
-                <h3><%= model.pluralize %></h3>
+                <h3><%= model.pluralize %>
+              &nbsp;&nbsp;
+              <span class="pill-like blue">
+                <span class="glyphicon glyphicon-share mar0"></span>&nbsp;<span>Assign To</span>
+              </span>
+              &nbsp;&nbsp;
+              <span class="pill-like green">
+              <span class="glyphicon glyphicon-envelope mar0"></span>&nbsp;<span>Email</span>
+              </span>
+              &nbsp;&nbsp;              
+              <span class="pill-like red1">
+              <span class="glyphicon glyphicon-remove mar0"></span>&nbsp;<span>Delete</span>
+              </span>
+              &nbsp;&nbsp;
+
+              <span class="pill-like purple">
+                <span class="glyphicon glyphicon-play mar0"></span>&nbsp;<span>Progression</span>
+              </span>
+              &nbsp;&nbsp;
+              <span class="pill-like purple">
+              <span class="glyphicon glyphicon-home mar0"></span>&nbsp;<span>Branch</span>
+              </span>
+              &nbsp;&nbsp;
+                
+                </h3>
+                
               </div>
               <div class="col-md-2">
                 <div class="form-group form-last pull-right">
