--- a/app/views/shared/_core_listing.html.erb
+++ b/app/views/shared/_core_listing.html.erb
@@ -11,6 +11,8 @@
 <% srch_url = send("search_" + model_pl + "_path") %>
 <% act = act || model_pl %>
 
+
+          
 <!-- Displaying data in the jquery datatable -->
             <div class="row">
               <div class="col-md-12 data-table">
@@ -18,6 +20,7 @@
             <% div_id = "group_assign_to_" + _id %>
             <div id="<%= div_id %>" data-model=<%= model %>></div>
             <div class="row row-top">
+              <% if false %>
               <div class="col-md-2">
                 <select id="mass-actions" style="width:130px" class="form-control hor-first">
                     <option>-Mass Actions-</option>
@@ -140,8 +143,9 @@
                            </span>" %>
                 <!-----------------------Export Details Modal End---------------------------->
               </div>
+              <% end %>
               <!-----------------------Search Start---------------------------->
-              <div class="col-md-8 text-center filter-center">
+              <div class="col-md-8 text-left filter-center">
                 <form class="form-inline" role="form">
                   <div class="form-group">
                     <label for="id_column">Filter by</label>
@@ -162,7 +166,7 @@
               </div>
              <!-----------------------Search End---------------------------->
              <!-----------------------FollowUp Filter Start---------------------------->
-              <div class="col-md-2">
+              <div class="col-md-4 text-right">
                 <form class="form-inline" role="form">
                   <div class="form-group pull-right">
                     <%= select_tag :abdc,
